--- a/add-offers.html
+++ b/add-offers.html
@@ -393,7 +393,7 @@
               <div class="row row-cols-lg-2 row-cols-1">
                 <div>
                   <div class="bg-white rounded-3 shadow-lg p-4 mb-4">
-                    <p class="mb-4 fw-semibold fs-5">Parents</p>
+                    <p class="mb-4 fw-semibold fs-5 required">Parents</p>
 
                     <div class="">
                       <div
@@ -493,7 +493,9 @@
                         />
                       </div>
                       <div class="mb-3">
-                        <label for="gender" class="form-label">Gender</label>
+                        <label for="gender" class="form-label required"
+                          >Gender</label
+                        >
                         <select
                           class="form-select rounded-3 shadow-none"
                           aria-label="Default select "
@@ -856,7 +858,10 @@
                   </div>
                 </div>
                 <div>
-                  <div class="bg-white rounded-3 shadow-lg p-4 mb-4" style="height: 776px;">
+                  <div
+                    class="bg-white rounded-3 shadow-lg p-4 mb-4"
+                    style="height: 776px"
+                  >
                     <p class="mb-4 fw-semibold fs-5">Location</p>
 
                     <div class="">
@@ -939,8 +944,11 @@
                     </div>
                   </div>
                 </div>
-                <div >
-                  <div class="bg-white rounded-3 shadow-lg p-4 mb-4" style="height: 776px;">
+                <div>
+                  <div
+                    class="bg-white rounded-3 shadow-lg p-4 mb-4"
+                    style="height: 776px"
+                  >
                     <p class="mb-4 fw-semibold fs-5">Title Note</p>
 
                     <div class="">
@@ -1156,7 +1164,10 @@
                   </div>
                 </div>
                 <div>
-                  <div class="bg-white rounded-3 shadow-lg p-4 mb-4" style="height: 635px;">
+                  <div
+                    class="bg-white rounded-3 shadow-lg p-4 mb-4"
+                    style="height: 635px"
+                  >
                     <p class="mb-4 fw-semibold fs-5">Tutor Requirement-3</p>
 
                     <div class="">
@@ -1234,7 +1245,10 @@
                   </div>
                 </div>
                 <div>
-                  <div class="bg-white rounded-3 shadow-lg p-4 mb-5" style="height: 635px;">
+                  <div
+                    class="bg-white rounded-3 shadow-lg p-4 mb-5"
+                    style="height: 635px"
+                  >
                     <p class="mb-4 fw-semibold fs-5">Others</p>
 
                     <div class="">
@@ -1290,20 +1304,22 @@
                           Guardian ID-31934
                         </p>
                       </div>
-                      <p>June 6, 2023 at 03:30 PM</p>
                     </div>
 
                     <div class="">
                       <div class="mb-4 border-bottom border-2">
-                        <div class="bg-light rounded-3 p-3 my-3"style="height: 150px; overflow-y: scroll;">
+                        <div
+                          class="bg-light rounded-3 p-3 my-3"
+                          style="height: 150px; overflow-y: scroll"
+                        >
                           Lorem Ipsum is simply dummy text of the printing and
                           typesetting industry. Lorem Ipsum has been the
                           industry's standard dummy text ever since the 1500s,
                           when an unknown printer took a galley of type and
-                          scrambled it to make a type specimen book.
-                          industry's standard dummy text ever since the 1500s,
-                          when an unknown printer took a galley of type and
-                          scrambled it to make a type specimen book.
+                          scrambled it to make a type specimen book. industry's
+                          standard dummy text ever since the 1500s, when an
+                          unknown printer took a galley of type and scrambled it
+                          to make a type specimen book.
                         </div>
                         <div
                           class="d-flex justify-content-between align-items-center mb-2"
@@ -1324,23 +1340,31 @@
                               </p>
                             </div>
                           </div>
-                          <p class="text-muted" style="font-size: 12px">
-                            Employee ID-32585
-                          </p>
+                          <div>
+                            <p class="text-muted mb-0" style="font-size: 12px">
+                              Employee ID-32585
+                            </p>
+                            <p class="text-muted" style="font-size: 12px">
+                              June 6, 2023 at 03:30 PM
+                            </p>
+                          </div>
                         </div>
                       </div>
                       <div class="mb-4 border-bottom border-2">
-                        <div class="bg-light rounded-3 p-3 my-3" style="height: 150px; overflow-y: scroll;">
+                        <div
+                          class="bg-light rounded-3 p-3 my-3"
+                          style="height: 150px; overflow-y: scroll"
+                        >
                           Lorem Ipsum is simply dummy text of the printing and
                           typesetting industry. Lorem Ipsum has been the
                           industry's standard dummy text ever since the 1500s,
                           when an unknown printer took a galley of type and
-                          scrambled it to make a type specimen book.
-                          Lorem Ipsum is simply dummy text of the printing and
-                          typesetting industry. Lorem Ipsum has been the
-                          industry's standard dummy text ever since the 1500s,
-                          when an unknown printer took a galley of type and
-                          scrambled it to make a type specimen book.
+                          scrambled it to make a type specimen book. Lorem Ipsum
+                          is simply dummy text of the printing and typesetting
+                          industry. Lorem Ipsum has been the industry's standard
+                          dummy text ever since the 1500s, when an unknown
+                          printer took a galley of type and scrambled it to make
+                          a type specimen book.
                         </div>
                         <div
                           class="d-flex justify-content-between align-items-center mb-2"
@@ -1361,9 +1385,14 @@
                               </p>
                             </div>
                           </div>
-                          <p class="text-muted" style="font-size: 12px">
-                            Employee ID-32585
-                          </p>
+                          <div>
+                            <p class="text-muted mb-0" style="font-size: 12px">
+                              Employee ID-32585
+                            </p>
+                            <p class="text-muted" style="font-size: 12px">
+                              June 6, 2023 at 03:30 PM
+                            </p>
+                          </div>
                         </div>
                       </div>
                       <div
@@ -1605,7 +1634,7 @@
                         <div
                           class="d-flex justify-content-end align-items-center"
                         >
-                          <button class="btn btn-danger px-4">Update</button>
+                          <button class="btn btn-danger px-4">Contact</button>
                         </div>
                       </div>
                     </div>
@@ -1968,7 +1997,11 @@
                       <div class="col-lg-4 col-12 mt-4 mt-lg-0">
                         <div
                           class="rounded-3 shadow-lg"
-                          style="padding: 30px 70px"
+                          style="
+                            padding: 30px 70px;
+                            opacity: 0.4;
+                            pointer-events: none;
+                          "
                         >
                           <div
                             class="d-flex flex-column justify-content-center gap-3"
