--- a/available-offer.html
+++ b/available-offer.html
@@ -478,7 +478,7 @@
                       class="table table-hover bg-white shadow-none"
                       style="border-collapse: collapse"
                     >
-                      <thead style="border-bottom: 1px solid #c8ced3">
+                      <thead class="text-dark" style="border-bottom: 1px solid #c8ced3">
                         <tr>
                           <th scope="col" class="text-nowrap">
                             <input
