--- a/job-edit-history-original.html
+++ b/job-edit-history-original.html
@@ -403,7 +403,7 @@
                     <h5 class="mb-5 ms-4">Parents Information</h5>
                     <div class="">
                       <div
-                        class="row row-cols-2 border-bottom border-1 mb-3 g-0 mx-4 edited"
+                        class="row row-cols-2 border-bottom border-1 mb-3 g-0 mx-4"
                       >
                         <p class="fw-semibold">Name</p>
                         <p class="">Abdur Rahman</p>
@@ -428,13 +428,13 @@
                         <p class="">2345</p>
                       </div>
                       <div
-                        class="row row-cols-2 border-bottom border-1 mb-3 g-0 mx-4 edited"
+                        class="row row-cols-2 border-bottom border-1 mb-3 g-0 mx-4"
                       >
                         <p class="fw-semibold">Number</p>
                         <p class="">01685696300</p>
                       </div>
                       <div
-                        class="row row-cols-2 border-bottom border-1 mb-3 g-0 mx-4 edited"
+                        class="row row-cols-2 border-bottom border-1 mb-3 g-0 mx-4"
                       >
                         <p class="fw-semibold">
                           When are you looking to hire?
@@ -499,7 +499,7 @@
                         <p class="">Abdur Rahman</p>
                       </div>
                       <div
-                        class="row row-cols-2 border-bottom border-1 mb-3 g-0 mx-4 edited"
+                        class="row row-cols-2 border-bottom border-1 mb-3 g-0 mx-4"
                       >
                         <p class="fw-semibold">Gender</p>
                         <p class="">Male</p>
@@ -523,7 +523,7 @@
                         <p class="">Class-8</p>
                       </div>
                       <div
-                        class="row row-cols-2 border-bottom border-1 mb-3 g-0 mx-4 edited"
+                        class="row row-cols-2 border-bottom border-1 mb-3 g-0 mx-4"
                       >
                         <p class="fw-semibold">Subjects</p>
                         <p class="">Bangla</p>
@@ -554,13 +554,13 @@
                         <p class="">2 Hour</p>
                       </div>
                       <div
-                        class="row row-cols-2 border-bottom border-1 mb-3 g-0 mx-4 edited"
+                        class="row row-cols-2 border-bottom border-1 mb-3 g-0 mx-4"
                       >
                         <p class="fw-semibold">Teaching Method</p>
                         <p class="">Student's Home</p>
                       </div>
                       <div
-                        class="row row-cols-2 border-bottom border-1 mb-3 g-0 mx-4 edited"
+                        class="row row-cols-2 border-bottom border-1 mb-3 g-0 mx-4"
                       >
                         <p class="fw-semibold">Maximum Salary</p>
                         <p class="">10000</p>
@@ -728,7 +728,7 @@
                         <p class="">Dhaka University</p>
                       </div>
                       <div
-                        class="row row-cols-2 border-bottom border-1 mb-3 g-0 mx-4 edited"
+                        class="row row-cols-2 border-bottom border-1 mb-3 g-0 mx-4"
                       >
                         <p class="fw-semibold">University Type</p>
                         <p class="">Public University</p>
@@ -759,7 +759,7 @@
                     <h5 class="mb-5 ms-4">Tutor Requirement -3</h5>
                     <div class="">
                       <div
-                        class="row row-cols-2 border-bottom border-1 mb-3 g-0 mx-4 edited"
+                        class="row row-cols-2 border-bottom border-1 mb-3 g-0 mx-4"
                       >
                         <p class="fw-semibold">School</p>
                         <p class="">B A D C High School</p>
