--- a/search-tutor.html
+++ b/search-tutor.html
@@ -397,11 +397,56 @@
                   >
                     <p class="text-nowrap">Search Tutors</p>
                     <div>
-                      <button class="btn btn-outline-primary">
-                        SMS Ranges 5
+                      <button class="btn btn-outline-primary py-1">
+                        <p class="p-0 m-0">SMS Ranges</p>
+                        <p class="p-0 m-0">5</p>
                       </button>
-                      <button class="btn btn-outline-info">SMS Send 50</button>
-                      <button class="btn btn-dark">Reset</button>
+                      <button class="btn btn-outline-info py-1">
+                        <p class="p-0 m-0">SMS Send</p>
+                        <p class="p-0 m-0">50</p>
+                      </button>
+                      <button class="btn btn-dark" style="height: 52px">
+                        Reset
+                      </button>
+                    </div>
+                  </div>
+                  <div class="mt-5">
+                    <select class="form-select shadow-none rounded-3">
+                      <option value="Latest Created Tutor">
+                        Latest Created Tutor
+                      </option>
+                      <option value="2nd Latest Created Tutor">
+                        2nd Latest Created Tutor
+                      </option>
+                      <option value="Random Tutor">Random Tutor</option>
+                      <option value="Bottom Tutor">Bottom Tutor</option>
+                      <option value="2nd Bottom Tutor">2nd Bottom Tutor</option>
+                    </select>
+                  </div>
+                  <!-- result box -->
+                  <div class="mt-4">
+                    <!-- Here gose the result box -->
+                  </div>
+                </div>
+                <div
+                  class="shadow-lg rounded-3 bg-white p-3 p-lg-5 mx-lg-5 mt-5"
+                >
+                  <div
+                    class="d-flex justify-content-between align-items-start flex-column flex-lg-row align-items-lg-center"
+                  >
+                    <p class="text-nowrap">Search Tutors</p>
+                    <div>
+                      <button class="btn btn-outline-primary py-1">
+                        <p class="p-0 m-0">SMS Ranges</p>
+                        <p class="p-0 m-0">5</p>
+                      </button>
+                      <button class="btn btn-outline-info py-1">
+                        <p class="p-0 m-0">SMS Send</p>
+                        <p class="p-0 m-0">50</p>
+                      </button>
+                      <button class="btn btn-dark" style="height: 52px">
+                        Reset
+                      </button>
                     </div>
                   </div>
                   <div class="mt-5">
@@ -447,7 +492,12 @@
                             </div>
                           </div>
                           <p class="text-muted">Mirpur , Dhaka</p>
-                          <p class="border rounded px-1 text-muted">100%</p>
+                          <p
+                            class="rounded px-1 text-muted"
+                            style="border: 2px solid #8a8f98"
+                          >
+                            100%
+                          </p>
                           <div class="form-check">
                             <input
                               class="form-check-input"
@@ -478,7 +528,12 @@
                             </div>
                           </div>
                           <p class="text-muted">Mirpur , Dhaka</p>
-                          <p class="border rounded px-1 text-muted">100%</p>
+                          <p
+                            class="rounded px-1 text-muted"
+                            style="border: 2px solid #8a8f98"
+                          >
+                            100%
+                          </p>
                           <div class="form-check">
                             <input
                               class="form-check-input"
@@ -510,7 +565,12 @@
                             </div>
                           </div>
                           <p class="text-muted">Mirpur , Dhaka</p>
-                          <p class="border rounded px-1 text-muted">100%</p>
+                          <p
+                            class="rounded px-1 text-muted"
+                            style="border: 2px solid #8a8f98"
+                          >
+                            100%
+                          </p>
                           <div class="form-check">
                             <input
                               class="form-check-input"
@@ -541,7 +601,12 @@
                             </div>
                           </div>
                           <p class="text-muted">Mirpur , Dhaka</p>
-                          <p class="border rounded px-1 text-muted">100%</p>
+                          <p
+                            class="rounded px-1 text-muted"
+                            style="border: 2px solid #8a8f98"
+                          >
+                            100%
+                          </p>
                           <div class="form-check">
                             <input
                               class="form-check-input"
@@ -573,7 +638,12 @@
                             </div>
                           </div>
                           <p class="text-muted">Mirpur , Dhaka</p>
-                          <p class="border rounded px-1 text-muted">100%</p>
+                          <p
+                            class="rounded px-1 text-muted"
+                            style="border: 2px solid #8a8f98"
+                          >
+                            100%
+                          </p>
                           <div class="form-check">
                             <input
                               class="form-check-input"
@@ -604,7 +674,12 @@
                             </div>
                           </div>
                           <p class="text-muted">Mirpur , Dhaka</p>
-                          <p class="border rounded px-1 text-muted">100%</p>
+                          <p
+                            class="rounded px-1 text-muted"
+                            style="border: 2px solid #8a8f98"
+                          >
+                            100%
+                          </p>
                           <div class="form-check">
                             <input
                               class="form-check-input"
@@ -622,7 +697,7 @@
                       class="d-flex justify-content-between align-items-center mt-4"
                     >
                       <button class="btn btn-primary">Send SMS</button>
-                      <button class="btn btn-light border shadow-lg">
+                      <button class="btn btn-danger border shadow-lg">
                         Clear
                       </button>
                     </div>
