--- a/sms-log.html
+++ b/sms-log.html
@@ -426,7 +426,7 @@
                       class="table table-hover bg-white shadow-none"
                       style="border-collapse: collapse"
                     >
-                    <thead style="border-bottom: 1px solid #c8ced3">
+                    <thead class="text-dark" style="border-bottom: 1px solid #c8ced3">
                       <tr>
                           <th scope="col" class="text-nowrap ps-4">SL</th>
                           <th scope="col" class="text-nowrap">Job ID</th>
